fix: addresses the user table overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,9 +103,10 @@ body,
   -webkit-box-shadow: inset 0 0 4px hsl(var(--primary));
 }
 /* text */
-span,
+/* span,
 p {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
+  width: max-content;
+} */
